BAU: Replace deprecated new URL(String) constructor
- new URL(String) is deprecated for removal in Java 25
- Migrate to URI.create(s).toURL() across source and test files

See: https://docs.oracle.com/en/java/javase/25/docs/api/java.base/java/net/URL.html